# didkit

./: CHANGELOG.md  Cargo.toml
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs  opts.rs
http/src/: lib.rs
lib/: Cargo.toml
lib/src/: c.rs  error.rs  jni.rs  lib.rs  ssh_agent.rs
