[workspace]
members = [
  "http",
  "cli",
  "lib",
  "lib/cbindings",
  "lib/node",
  "lib/web",
]

default-members = [
  "http",
  "cli",
  "lib",
  "lib/cbindings",
]

[patch.crates-io]
#ssi = { path = "../ssi" }
ssi = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
