[workspace]
members = [
  "http",
  "cli",
  "lib",
  "lib/cbindings",
  "lib/node",
  "lib/web",
]

default-members = [
  "http",
  "cli",
  "lib",
  "lib/cbindings",
]

[patch.crates-io]
did-ion = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-ethr = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-method-key = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-onion = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-pkh = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-sol = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-tz = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-web = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
did-webkey = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
ssi-did-test = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
ssi = { git = "https://github.com/LedgerDomain/ssi", branch = "feature-context-loader" }
